ability to upload file stream